# jackal

./: README.md
jackal_control/launch/: control.launch
jackal_description/launch/: description.launch
jackal_description/urdf/: accessories.urdf.xacro  jackal.gazebo  jackal.urdf.xacro
jackal_description/urdf/accessories/: OS1.urdf.xacro  OS1_mount.urdf.xacro
jackal_description/urdf/configs/: front_laser
jackal_launch/: CMakeLists.txt  package.xml
jackal_launch/launch/: jackal_autonomy.launch  jackal_hw.launch  jackal_navigation.launch  jackal_navigation_sim.launch  jackal_octomap.launch  jackal_sim.launch  jackal_world.launch  os1.launch  single_jackal.launch
jackal_launch/worlds/: simple_city.world
jackal_navigation/launch/: jackal_navigation.launch  odom_navigation_demo.launch
jackal_navigation/params/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml
jackal_robot/jackal_base/launch/: base.launch  jackal_main.launch  ouster.launch
jackal_teleop/: CMakeLists.txt  package.xml
jackal_teleop/launch/: jackal_teleop.launch
jackal_teleop/src/: jackal_teleop.py
laser_simulator/laser_description_organized/: CMakeLists.txt  package.xml
laser_simulator/laser_description_organized/launch/: example.launch
laser_simulator/laser_description_organized/urdf/: VLP-16.urdf.xacro  example.urdf.xacro
laser_simulator/laser_gazebo_plugins_organized/: CMakeLists.txt  package.xml
laser_simulator/laser_gazebo_plugins_organized/include/laser_gazebo_plugins/: GazeboRosLaserOrganized.h
laser_simulator/laser_gazebo_plugins_organized/src/: GazeboRosLaserOrganized.cpp
laser_simulator/laser_simulator_organized/: CMakeLists.txt  package.xml
multirobot_sensing/: CMakeLists.txt  package.xml
multirobot_sensing/launch/: multirobot_sensing.launch
multirobot_sensing/src/: multirobot_sensing.py  publish_odom_tf.py
